<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegistroUsuario">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/azulClaro"
            android:padding="24dp"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btnVolver"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp"
                android:backgroundTint="@android:color/white"
                android:layout_gravity="center"
                >

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/flecha"
                    android:scaleType="centerInside"/>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text1RegUsuario"
                android:textSize="29sp"
                android:layout_marginLeft="40dp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text2RegUsuario"
                android:textColor="#202244"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtContra"
                android:textSize="22sp"
                android:paddingTop="20dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/azulClaro2"
                app:boxCornerRadiusTopStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxStrokeColor="@color/azulBorder"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtContrasena"
                    android:background="@drawable/edittext_azul"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:padding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtContra2"
                android:textSize="22sp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/azulClaro2"
                app:boxCornerRadiusTopStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxStrokeColor="@color/azulBorder"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtConfContrasena"
                    android:background="@drawable/edittext_azul"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textWebPassword"
                    android:textColor="@color/black"
                    android:padding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <CheckBox
                    android:id="@+id/checkTerminos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtTerminos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Acepto los Términos y Condiciones"
                    android:textSize="16sp"
                    android:layout_marginStart="2dp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEnviar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="100dp"
                    android:paddingVertical="15dp"
                    android:backgroundTint="@color/azulClaro"
                    android:textColor="@color/white"
                    android:text="Enviar"
                    android:textSize="15sp"
                    app:cornerRadius="20dp" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</FrameLayout>